# PrivHZChain

./: CMakeLists.txt  Dockerfile  README.md
MonitoringCSA/: Aggtest.cpp  TxGen.cpp  TxGen.hpp  core  core.cpp  core.h  mainalgorithms.cpp  mainalgorithms.hpp  polyonfr.cpp  test.cpp
include/: ownpf.h  poly.h  test.h  txs.h  utils.h  zkacc.h
src/: ownpf.cpp  poly.cpp  test.cpp  txs.cpp  utils.cpp  zkacc.cpp
testData_new/: Agg_ZKMP.csv  Agg_ZKMP_PCopenP.csv  Agg_ZKMP_PME.csv  Agg_ZKMP_StructGen.csv  Agg_ZKMP_ZKIPP.csv  Agg_ZKMP_ZKMP.csv  Agg_ZKMP_commit.csv  ZKIPPTest.csv  ZKMP_p.txt  ZKMP_v.txt  ZKNMP_p.txt  ZKNMP_v.txt  ZKSP_p.txt  ZKSP_v.txt  dataExit_1000.csv  dataExit_125.csv  dataExit_2000.csv  dataExit_250.csv  dataExit_500.csv  dataTransfer_10000.csv  dataTransfer_1250.csv  dataTransfer_2500.csv  dataTransfer_5000.csv  dataTransfer_625.csv  dataTx_Entry_1000_tmp.csv  dataTx_Entry_125.csv  dataTx_Entry_2000_tmp.csv  dataTx_Entry_250.csv  dataTx_Entry_500.csv  setup_new.csv
